K8S/prometheus-pushgateway/base/deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "pushgateway"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "pushgateway"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "pushgateway"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9092"
    spec:
      serviceAccountName: "pushgateway"
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsGroup: 65534
      volumes:
        - name: "data"
          emptyDir: {}
      containers:
        - name: "pushgateway"
          image: "prom/pushgateway:latest"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--log.level=info"
            - "--web.listen-address=0.0.0.0:9092"
            - "--web.telemetry-path=/metrics"
            - "--persistence.interval=5m"
            - "--persistence.file=/data/pushgateway.data"
          volumeMounts:
            - name: "data"
              mountPath: "/data"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9092
          resources:
            requests:
              memory: "32Mi"
            limits:
              memory: "32Mi"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5
            httpGet:
              path: "/-/healthy"
              port: "http"
              scheme: "HTTP"
          readinessProbe:
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5
            httpGet:
              path: "/-/ready"
              port: "http"
              scheme: "HTTP"
