K8S/prometheus-pushgateway/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "testing"
  name: "pushgateway"
spec:
  selector:
    app.kubernetes.io/name: "pushgateway"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 9092
      targetPort: 9092
