K8S/prometheus-pushgateway/base/policy.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "pushgateway-external-access"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "pushgateway"
  ingress:
    - {}
